# Tsunami

./: .gitignore  LICENSE  README  README.md  controller.js  index.css  index.html  keys.js  main.js  networktables.js  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: test.yml
Tsunami-App/: .eslintrc.js  next.config.js  package-lock.json  package.json
Tsunami-App/.run/: Run Application.run.xml
Tsunami-App/src/: App.vue  Tsunami.vue  main.ts  styles.css
Tsunami-App/src-tauri/: Cargo.toml  tauri.conf.json
Tsunami-App/src-tauri/src/: main.rs  nt.rs  robot.rs  settings.rs
Tsunami-App/src-tauri/src/robot/: robot.rs
Tsunami-App/src/components/: TabButton.vue  Viewport.vue
Tsunami-App/src/components/tabs/: Constants.vue  Hardware.vue  Telemetry.vue
Tsunami-App/src/pages/: _app.tsx  index.tsx
Tsunami-App/src/styles/: globals.css  main.scss
Tsunami-CLI/: Cargo.toml
Tsunami-Lib/.run/: Build & Run Romi.run.xml
app/: .metadata  README.md  pubspec.yaml
app/lib/: main.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
frc-dashboard/: package-lock.json  package.json
frc-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
frc-dashboard/src-tauri/src/: main.rs
frc-dashboard/src/pages/: _document.tsx
frc-dashboard/src/styles/: globals.css
lib/: .gitignore
lib/.run/: Debug Robot via IP.run.xml  Debug Robot via USB.run.xml  Launch Shuffleboard.run.xml  Launch SmartDashboard.run.xml
(+7 files in other folders)
